--- a/about.html
+++ b/about.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Want to reach out to me? You can contact me here"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -11,12 +15,14 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>About Praise</title>
+    <title>About Me - Praise Obafemi</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Praise Obafemi</a>
+        <a class="navbar-brand" href="index.html" title="Homepage"
+          >Praise Obafemi</a
+        >
         <button
           class="navbar-toggler"
           type="button"
@@ -30,9 +36,20 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link" aria-current="page" href="index.html">Home</a>
+            <a
+              class="nav-link"
+              aria-current="page"
+              href="index.html"
+              title="Homepage"
+              >Home</a
+            >
             <a class="nav-link active" href="about.html">About Me</a>
-            <a class="nav-link" href="about.html#contact">Contact Me</a>
+            <a
+              class="nav-link"
+              href="about.html#contact"
+              title="Contact Praise Obafemi"
+              >Contact Me</a
+            >
           </div>
         </div>
       </div>
@@ -52,21 +69,21 @@
         <div class="col-sm-4">
           <img
             src="images/yoga.png"
-            alt=""
+            alt="yoga image"
             class="img-fluid p-2 shadow rounded"
           />
         </div>
         <div class="col-sm-4">
           <img
             src="images/weather.png"
-            alt=""
+            alt="weather app image"
             class="img-fluid p-2 shadow rounded"
           />
         </div>
         <div class="col-sm-4">
           <img
             src="images/yogurt.png"
-            alt=""
+            alt="yogurt image"
             class="img-fluid p-2 shadow rounded"
           />
         </div>
