--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Praise Obafemi</title>
+    <meta
+      name="description"
+      content="This is a portfolio website, showcasing projects worked on by me as a Front-end developer"
+    />
+    <title>Front-end developer - Praise Obafemi</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -16,7 +20,9 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Praise Obafemi</a>
+        <a class="navbar-brand" href="index.html" title="Homepage"
+          >Praise Obafemi</a
+        >
         <button
           class="navbar-toggler"
           type="button"
@@ -33,8 +39,15 @@
             <a class="nav-link active" aria-current="page" href="index.html"
               >Home</a
             >
-            <a class="nav-link" href="about.html">About Me</a>
-            <a class="nav-link" href="about.html#contact">Contact Me</a>
+            <a class="nav-link" href="about.html" title="About Praise Obafemi"
+              >About Me</a
+            >
+            <a
+              class="nav-link"
+              href="about.html#contact"
+              title="Contact Praise Obafemi"
+              >Contact Me</a
+            >
           </div>
         </div>
       </div>
@@ -43,13 +56,24 @@
     <h1>Praise Obafemi</h1>
     <h3>🇳🇬 Front-end developer, based in Africa</h3>
     <div class="navigation-links">
-      <a href="about.html#contact" class="contact-link">Contact me</a>
-      <a href="about.html" class="about-link">About me</a>
+      <a
+        href="about.html#contact"
+        class="contact-link"
+        title="Contact Praise Obafemi"
+        >Contact me</a
+      >
+      <a href="about.html" class="about-link" title="About Praise Obafemi"
+        >About me</a
+      >
     </div>
     <div class="container">
       <div class="row mt-5">
         <div class="col-md-6">
-          <img src="images/yoga.png" alt="" class="img-fluid rounded" />
+          <img
+            src="images/yoga.png"
+            alt="yoga image"
+            class="img-fluid rounded"
+          />
         </div>
         <div class="col-md-6">
           <h2 class="text-start">Yoga app</h2>
@@ -60,7 +84,9 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-buttons">Launch Yoga app</a>
+            <a href="#" class="primary-buttons" title="Yoga Project"
+              >Launch Yoga app</a
+            >
           </div>
         </div>
       </div>
@@ -74,16 +100,26 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-buttons">Launch Weather app</a>
+            <a href="#" class="primary-buttons" title="Weather Project"
+              >Launch Weather app</a
+            >
           </div>
         </div>
         <div class="col-md-6 mt-5">
-          <img src="images/weather.png" alt="" class="img-fluid rounded" />
+          <img
+            src="images/weather.png"
+            alt="weather app image"
+            class="img-fluid rounded"
+          />
         </div>
       </div>
       <div class="row mt-5">
         <div class="col-md-6">
-          <img src="images/yogurt.png" alt="" class="img-fluid rounded" />
+          <img
+            src="images/yogurt.png"
+            alt="yogurt image"
+            class="img-fluid rounded"
+          />
         </div>
         <div class="col-md-6">
           <h2 class="text-start">Yogurt app</h2>
@@ -94,7 +130,9 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-buttons">Launch Yogurt app</a>
+            <a href="#" class="primary-buttons" title="Yogurt Project"
+              >Launch Yogurt app</a
+            >
           </div>
         </div>
       </div>
