--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
             class="img-fluid p-2 shadow rounded"
           />
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-4 mb-sm-3">
           <img
             src="images/weather.png"
             alt="weather app image"
