--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
           <img
             src="images/yoga.png"
             alt="yoga image"
-            class="img-fluid rounded"
+            class="img-fluid rounded d-none d-sm-block"
           />
         </div>
         <div class="col-md-6">
-          <h2 class="text-start">Yoga app</h2>
-          <p class="paragraph text-start ps-0">
+          <h2 class="text-sm-start">Yoga app</h2>
+          <p class="paragraph text-sm-start ps-0">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
             quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
             eos eveniet alias temporibus deserunt veritatis minima fugiat
@@ -92,8 +92,8 @@
       </div>
       <div class="row mt-5">
         <div class="col-md-6">
-          <h2 class="text-start">Weather app</h2>
-          <p class="paragraph text-start ps-0">
+          <h2 class="text-sm-start">Weather app</h2>
+          <p class="paragraph text-sm-start ps-0">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
             quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
             eos eveniet alias temporibus deserunt veritatis minima fugiat
@@ -105,11 +105,11 @@
             >
           </div>
         </div>
-        <div class="col-md-6 mt-5">
+        <div class="col-md-6">
           <img
             src="images/weather.png"
             alt="weather app image"
-            class="img-fluid rounded"
+            class="img-fluid rounded d-none d-sm-block"
           />
         </div>
       </div>
@@ -118,12 +118,12 @@
           <img
             src="images/yogurt.png"
             alt="yogurt image"
-            class="img-fluid rounded"
+            class="img-fluid rounded d-none d-sm-block"
           />
         </div>
         <div class="col-md-6">
-          <h2 class="text-start">Yogurt app</h2>
-          <p class="paragraph text-start ps-0">
+          <h2 class="text-sm-start">Yogurt app</h2>
+          <p class="paragraph text-sm-start ps-0">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
             quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
             eos eveniet alias temporibus deserunt veritatis minima fugiat
